--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ user_name: "Rook1echen"
 repo_name: "arxiv-daily"
 show_authors: True
 show_links: True
-show_badge: False # readme 上的彩色标签
+show_badge: False 
 max_results: 10
 
 publish_readme: True
