--- a/config.yaml
+++ b/config.yaml
@@ -24,16 +24,10 @@ md_wechat_path: './docs/wechat.md'
 keywords:
     "penetration testing": 
         filters: ["penetration testing"]
-    # "SFM":
-    #     filters: ["SFM", "Structure from Motion"]
-    # "Visual Localization":
-    #     filters: ["Visual Localization","Camera Localization",
-    #               "Camera Re-localisation","Loop Closure Detection",
-    #               "visual place recognition","image retrieval"]
-    # "Keypoint Detection":
-    #     filters: ["Keypoint Detection", "Feature Descriptor"]
-    # "Image Matching":
-    #     filters: ["Image Matching", "Keypoint Matching", 
-    #               "Line Segment Detection", "Local Feature Matching"]
-    # "NeRF":
-    #     filters: ["NeRF"]
+    "attack graph":
+        filters: ["attack graph", "reinforcement learning"]
+    "GAIL: Generative Adversarial Imitation Learning":
+        filters: ["GAIL","Generative Adversarial Imitation Learning"]
+    "knowledge graph":
+        filters: ["knowledge graph","attack graph"]
+    
